<resources>

    <string name="app_name">ABNDP8</string>




    <string name="edit_kit">Edit Kit Product</string>


    <string name="action_save">Save</string>


    <string name="label_product_overview">Product Overview</string>
    <string name="edit_product_name">Product Name</string>
    <string name="edit_price">Price</string>
    <string name="edit_quantity">Quantity</string>
    <string name="label_supplier_overview">Supplier Overview</string>
    <string name="edit_supplier_name">Supplier Name</string>
    <string name="edit_supplier_contact">Supplier Contact</string>


    <string name="the_kit_table_contains">The Kit table contains</string>
    <string name="kit">kit items.</string>


    <string name="error_saving_kit">Error with saving kit</string>
    <string name="kit_saved">Kit saved with row id:</string>


    <string name="required_field">Required</string>


    <string name="price_cannot_be_negative">Price cannot be negative</string>


    <string name="quantity_cannot_be_negative">Quantity cannot be negative</string>
</resources>