<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/editor_main_linear_layout_padding">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/product_overview"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/edit_width"
            android:layout_weight="2"
            android:paddingTop="@dimen/edit_padding"
            android:text="@string/label_product_overview" />


        <LinearLayout
            android:layout_width="@dimen/edit_width"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">


            <EditText
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_product_name"
                android:textAppearance="?android:textAppearanceMedium" />

            <!--Price Field-->
            <EditText
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_price"
                android:inputType="numberSigned"/>

            <!--Quantity Field-->
            <EditText
                android:id="@+id/product_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_quantity"
                android:inputType="numberSigned"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/overivew_spacing_margin_top"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/supplier_overview"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/edit_width"
            android:layout_weight="2"
            android:paddingTop="@dimen/edit_padding"

            android:text="@string/label_supplier_overview" />


        <LinearLayout
            android:layout_width="@dimen/edit_width"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">


            <EditText
                android:id="@+id/supplier_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_supplier_name" />


            <EditText
                android:id="@+id/supplier_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_supplier_contact"
                android:inputType="phone"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>